--- a/IPMS_KLK/Views/MainMenuOptions/FFBCountingMenuOptions/AmendVerificationFFB_InputScreen1.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/FFBCountingMenuOptions/AmendVerificationFFB_InputScreen1.xaml
@@ -3,12 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenuOptions.FFBCountingMenuOptions.AmendVerificationFFB_InputScreen1"
              BackgroundImageSource="bg.jpg"
-             BackgroundColor="Transparent">
-    
-    
-    
-    <ContentPage.Content>
-        
-        
-    </ContentPage.Content>
+             BackgroundColor="Transparent"
+             Title="Amend Verification">
+
+
+
+    <ListView ItemsSource="{Binding bunchCountList}">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <StackLayout>
+                        <Label Text="{Binding TRANS_NO}"/>
+                    </StackLayout>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
