--- a/IPMS_KLK/Views/LoginPage.xaml
+++ b/IPMS_KLK/Views/LoginPage.xaml
@@ -2,39 +2,62 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.LoginPage"
-             BackgroundImageSource="sky_bg.jpg">
+             xmlns:PanCake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView">
 
-    <StackLayout Padding="0" VerticalOptions="CenterAndExpand">
-        <Grid>          
-            <StackLayout>
-                <Frame Margin="15,50,15,50" BackgroundColor="White" HasShadow="True" HeightRequest="380" HorizontalOptions="CenterAndExpand" BorderColor="DarkGray" CornerRadius="25">
-                    <StackLayout>
-                        <StackLayout HorizontalOptions="CenterAndExpand">
-                            <Label Text="KLK IPMS" FontSize="Large" FontAttributes="Bold" TextColor="Black" HorizontalTextAlignment="Center"/>
-                            <Label Text="Integrated Plantation Management Solution" FontSize="Small" TextColor="Black" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label">
+                <Setter Property="FontFamily" Value="Cool"/>
+                <Setter Property="TextColor" Value="Black"/>
+            </Style>
 
-                        <StackLayout Margin="0,25,0,0">
-                            <Frame BackgroundColor="White" BorderColor="DarkGray" Padding="0" Margin="0" CornerRadius="50" HorizontalOptions="FillAndExpand">
+            <Style TargetType="Entry">
+                <Setter Property="FontFamily" Value="sfThin"/>
+                <Setter Property="FontSize" Value="Medium"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <StackLayout Padding="0" >
+        
+        <StackLayout VerticalOptions="EndAndExpand">
+            <Image Source="klk_logo.png" HeightRequest="80" WidthRequest="80"  Margin="0,10,0,10"/>            
+        </StackLayout>
+        
+        <StackLayout>
+            <!--<Label Text="KLK IPMS" FontSize="Title"   Margin="0,10,0,0" HorizontalTextAlignment="Center"/> -->
+            <Label Text="Integrated Plantation Management Solution" FontSize="Medium"  Margin="0,10,0,0" HorizontalTextAlignment="Center"/>
+        </StackLayout>
+        
+        <Grid VerticalOptions="EndAndExpand">          
+            <StackLayout >
+                <Image Source="ui.png" Aspect="AspectFit" HorizontalOptions="Center" Margin="50,20,50,20"/>               
+                    
+                    <StackLayout>  
+                        <StackLayout Margin="50,15,50,0">
+                            <Label Text="Enter Username : "  Margin="10,0,0,0" FontAttributes="Bold" FontSize="Medium"/>
+                            <Frame BackgroundColor="Transparent" BorderColor="Transparent" Padding="0" Margin="0" CornerRadius="50" HorizontalOptions="FillAndExpand">
                                 <StackLayout Orientation="Horizontal">
                                     <Frame BackgroundColor="LightSeaGreen" CornerRadius="50" HeightRequest="35" WidthRequest="35" Padding="0" HorizontalOptions="Start" Margin="7"/>
                                     <Entry PlaceholderColor="Black" Placeholder="Username" TextColor="Black" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
                                 </StackLayout>
                             </Frame>
-
-                            <Frame BackgroundColor="White" BorderColor="DarkGray" Padding="0" Margin="0,20,0,0" CornerRadius="50" HorizontalOptions="FillAndExpand">
+                            <Label Text="Enter Password : "  Margin="10,25,0,0" FontAttributes="Bold" FontSize="Medium"/>
+                        <Frame BackgroundColor="Transparent" BorderColor="Transparent" Padding="0" Margin="0,0,0,0" CornerRadius="50" HorizontalOptions="FillAndExpand">
                                 <StackLayout Orientation="Horizontal">
-                                    <Frame BackgroundColor="LightSeaGreen" CornerRadius="50" HeightRequest="35" WidthRequest="35" Padding="0" HorizontalOptions="Start" Margin="7"/>
+                                <Frame BackgroundColor="LightSeaGreen" CornerRadius="50" HeightRequest="35" WidthRequest="35" Padding="0" HorizontalOptions="Start" Margin="7"/>
                                     <Entry PlaceholderColor="Black" Placeholder="Password" IsPassword="True" TextColor="Black" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
                                 </StackLayout>
                             </Frame>
                         </StackLayout>
 
-                        <Button x:Name="Login_Button" Margin="0,30,0,0" Padding="0,25,0,25" Text="LOGIN" BackgroundColor="LightSeaGreen" FontSize="Medium" TextColor="White" FontAttributes="Bold" CornerRadius="40"/>
+                    <Button x:Name="Login_Button" Margin="40,30,40,30" Padding="0,25,0,25" Text="LOGIN" BackgroundColor="DarkCyan" FontSize="Large" TextColor="White"  CornerRadius="40" FontFamily="Cool" />
                     </StackLayout>
-                </Frame>
+                
             </StackLayout>
         </Grid>
-        <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
+        
+
     </StackLayout>
+    
 </ContentPage>
